--- a/style2.css
+++ b/style2.css
@@ -244,6 +244,9 @@ div.section-one-row {
 	border-bottom: solid black 1px;
 	box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
+.col-md-4.scroller-element4 {
+    margin-top: 0px;
+}
 .col-md-5.scroller-element1 {
 	padding-right: 5px;
 	width: 571.62px;
@@ -372,6 +375,7 @@ div.section-one-row {
 .vertical-scroller {
     overflow-x: hidden;
     overflow-y: hidden;
+    height: 1500px;
 }
 
 /* Header Ad */
@@ -445,6 +449,73 @@ div.section-one-row {
 .material-icons.accessories-add:hover {
 	transform: scale(1.3);
 	transition: .2s ease;
+}
+.col-md-3.socks-ad {
+    position: absolute;
+    margin-top: 20px;
+    position: absolute;
+    top: 900px;
+    left: -15px;
+    border-bottom: solid black 2px;
+    width: 265px !important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 15px;
+    padding: 0px;
+}
+.col-md-3.sweatshirt-ad {
+    position: absolute;
+    margin-top: 20px;
+    position: absolute;
+    top: 900px;
+    left: 290px;
+    border-bottom: solid black 2px;
+    width: 265px !important;
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    margin-left: 15px;
+    padding: 0px;
+}
+.email-attention {
+    font-family: graphikmedium;
+    font-size: 30px;
+    color: #202020;
+    position: absolute;
+    top: 1400px;
+    left: 150px;
+}
+.stay-updated {
+    font-family: graphikmedium;
+    font-size: 10px;
+    color: grey;
+    position: absolute;
+    top: 1450px;
+    left: 170px;
+}
+.email-address {
+    font-family: graphikmedium;
+    font-size: 10px;
+    color: grey;
+    position: absolute;
+    top: 1500px;
+    left: 120px;
+    padding: 20px 140px 20px 20px;
+    border: solid grey 1px;
+    border-radius: 3px;
+}
+button.email {
+    position: absolute;
+    top: 1500px;
+    left: 370px;
+    background-color: #202020;
+    padding: 17px 15px;
+    font-family: graphikregular;
+    color: white;
+    font-size: 14px;
+    border-radius: 3px;
+    box-shadow: inset 0px 0px 2px 0px rgba(0,0,0,0.5);
+}
+.email:hover {
+	transition: ease .2s;
+	transform: scale(1.1);
 }
 
 /* Water Bottle Ad */
