--- a/assets/scss/_nav.scss
+++ b/assets/scss/_nav.scss
@@ -18,7 +18,174 @@
         background-color: #f1f1f1;
         min-width: 160px;
         box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
+        z-index: 100 !important;
+        width: 100vw;
+        height: 390px;
+        top: -30px;
+        .close-dropdown {
+            display: inline;
+            color: black;
+            margin-left: 20px;
+        }
+        .material-icons.dropdown:hover {
+            transform: scale(1.1);
+            transition: ease .2s;
+        }
+        img.dropdown-logo {
+            width: 150px;
+            margin: 0px;
+        }
+        .dropdown-search {
+            font-size: 20px;
+            display: inline;
+        }
+        a.teton-link {
+            position: absolute;
+            top: -5px;
+            right: 540px;
+        }
+        i.material-icons.link-arrow {
+            font-size: 10px;
+            margin-left: 10px;
+            color: black;
+        }
+        .dropdown-area1 {
+            line-height: 10px;
+            position: absolute;
+            margin-left: 30px
+        }
+        .dropdown-headers1 {
+            line-height: 5px;
+            margin: 10px;
+        }
+        .dropdown-area2 {
+            line-height: 10px;
+            position: absolute;
+            margin-left: 250px
+        }
+        .dropdown-headers2 {
+            margin-left: 10px;
+            margin-top: 30px;
+        }
+        .dropdown-area3 {
+            line-height: 10px;
+            position: absolute;
+            margin-left: 500px
+        }
+        .eyewear {
+            margin-top: 25px;
+        }
+        .sale {
+            margin-top: 15px;
+            color: red;
+        }
+        .dropdown-area4 {
+            line-height: 10px;
+            position: absolute;
+            margin-left: 700px
+        }
+
+        img.login-hero {
+            position: absolute;
+            right: 0px;
+            height: 390px;
+            width: 550px;
+            border-right: solid red 40px;
+            padding: 0px;
+        }
+        .login-hero-overlay {
+            position: absolute;
+            right: 40px;
+            width: 510px;
+            height: 390px;
+            background-color: black;
+            opacity: .8;
+            top: 0px;
+        }
+        .login-name {
+            position: absolute;
+            right: 250px;
+            color: white;
+            font-family: graphikmedium;
+            font-size: 40px;
+            top: 200px;
+        }
+        img.login-profile {
+            padding: 0px;
+            margin: 0px;
+            border-radius: 100px;
+            height: 130px;
+            width: 130px;
+            position: absolute;
+            right: 290px;
+            top: 45px;
+        }
+        .login-shipping {
+            position: absolute;
+            color: white;
+            right: 280px;
+            font-family: nittiblack;
+            text-transform: uppercase;
+            top: 265px;
+            font-size: 13px;
+        }
+        .login-address {
+            font-family: graphikregular;
+            color: white;
+            font-size: 15px;
+            top: 285px;
+            right: 278px;
+            position: absolute;
+            text-align: center;
+        }
+        button.edit-profile {
+            position: absolute;
+            right: 450px;
+            top: 350px;
+            background: none;
+            color: white;
+            font-family: graphikextralight;
+            padding: 5px 10px;
+            border: solid white 1.5px;
+            border-radius: 3px;
+        }
+        button.edit-profile:hover {
+            transform: scale(1.1);
+            transition: ease .2s;
+        }
+        .not-you {
+            font-family: graphikextralight;
+            color: white;
+            right: 340px;
+            position: absolute;
+            top: 355px;
+        }
+        .not-you-sign {
+            color: white;
+            font-family: graphikmedium;
+            position: absolute;
+            right: 285px; 
+            top: 355px;
+        }
+        .not-you-sign:hover {
+            transform: scale(1.1);
+            transition: ease .2s;
+        }
+        button.your-cart {
+            position: absolute;
+            right: 200px;
+            top: 350px;
+            background: none;
+            border: none;
+        }
+        button.your-cart:hover {
+            transform: scale(1.1);
+            transition: ease .2s;
+        }
+        span.glyphicon.login-cart {
+            color: white;
+            font-size: 20px;
+        }
     }
 
     .dropdown-content a {
@@ -26,15 +193,24 @@
         padding: 12px 16px;
         text-decoration: none;
         display: block;
+        font-family: graphikblack;
+    }
+     a.sub-categories {
+        color: gray;
+        font-family: graphikmedium;
+        font-size: 11px;
     }
 
     .dropdown-content a:hover {
         background-color: #ddd;
     }
-
-    .dropdown:hover .dropdown-content {
-        display: block;
+    .show {
+        display:block;
     }
+
+   /* .dropdown:hover .dropdown-content {
+        display: block;
+    }*/
 
     .dropdown:hover .dropbtn {
         transform: scale(1.1);
